# Rules_enginee

./: .gitignore  .settings  README.md  build_db.py  json_schema_builder.py  main.py  pyproject.toml  test_agent.ipynb  test_agent.py
src/: app.py  loggers.py  routers.py
src/core/agent/: __init__.py  base.py  f_calling_utils.py  main.py  schemas.py  template.py
src/core/client/: __init__.py  base.py  factory.py  llmclient.py
src/core/console/: __init__.py  base.py  default.py  utility.py
src/core/dataloader/: __init__.py  main.py
src/core/executator/: __init__.py  main.py
src/core/transformer/: __init__.py  remove_prefix.py
src/db/: provider.py  pydantic_col_type.py
src/db/curd/: agent_response.py  data_model.py  dataset.py  rules_info.py
src/db/orms/: __init__.py  agent_response.py  base.py  datamodel.py  dataset.py  rules_info.py
src/endpoints/dataset/: __init__.py  schemas.py  views.py
src/endpoints/rules/: __init__.py  builder.py  schemas.py  views.py
src/endpoints/scores/: __init__.py  schemas.py  views.py
src/settings/: __init__.py  appsettings.py  dbsettings.py  main.py
